--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,20 @@
 altgraph==0.17.4
 annotated-types==0.7.0
 anyio==4.8.0
+auto-py-to-exe==2.46.0
 blinker==1.9.0
+bottle==0.13.2
+bottle-websocket==0.2.9
 certifi==2025.1.31
+cffi==1.17.1
 charset-normalizer==3.4.1
 click==8.1.8
 colorama==0.4.6
+customtkinter==5.2.2
+darkdetect==0.8.0
 distlib==0.3.9
 dnspython==2.7.0
+Eel==0.18.1
 email_validator==2.2.0
 fastapi==0.115.11
 fastapi-cli==0.0.7
@@ -15,6 +22,10 @@ filelock==3.17.0
 Flask==3.1.0
 flask-cors==5.0.1
 Flask-MySQLdb==2.0.0
+future==1.0.0
+gevent==24.11.1
+gevent-websocket==0.10.1
+greenlet==3.2.0
 h11==0.14.0
 httpcore==1.0.7
 httptools==0.6.4
@@ -34,12 +45,14 @@ packaging==24.2
 pefile==2023.2.7
 pillow==11.1.0
 platformdirs==4.3.6
+pycparser==2.22
 pydantic==2.10.6
 pydantic_core==2.27.2
 Pygments==2.19.1
 pyinstaller==6.12.0
 pyinstaller-hooks-contrib==2025.1
 PyMySQL==1.1.1
+pyparsing==3.2.3
 pytesseract==0.3.13
 python-dotenv==1.0.1
 python-multipart==0.0.20
@@ -61,3 +74,5 @@ virtualenv==20.29.3
 watchfiles==1.0.4
 websockets==15.0.1
 Werkzeug==3.1.3
+zope.event==5.0
+zope.interface==7.2
